--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,8 @@
 	<a href="/">Home Page</a>
 	&nbsp
   	<a href="/trips">All Trips</a>
+  &nbsp
+  	<a href="/trips/new">Add a Trip</a>
 </nav>
   <main>
     <h1><%= title %></h1>
