--- a/views/trips/index.ejs
+++ b/views/trips/index.ejs
@@ -15,8 +15,8 @@
     <% trips.forEach(function(trip) { %>
       <tr>
         <td><%= trip.name %></td>
-        <td><%= trip.from %></td>
-		<td><%= trip.to %></td>
+        <td><%= trip.from.toLocaleDateString() %></td>
+		<td><%= trip.to.toLocaleDateString() %></td>
         <td><a href="/trips/<%= trip._id %>">DETAILS</a></td>
       </tr>
     <% }); %>
