--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,28 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Travel Journal</title>
-  <link rel="icon" type="image/x-icon" src="../../public/images/Logo.png">
+  <link rel="icon" href="../images/logo.png" type = "image/x-icon">
+
+  <script>
+     function openMenu(){
+        const nav = document.getElementById("navbar-items");
+          if (nav.style.display === "flex"){
+              nav.style.display = "none";
+         } else {
+              nav.style.display = "flex";
+          }
+        }
+  </script>
+
 </head>
 <body>
-  <nav>
-    <img src="../../public/images/Logo.png">
-	  <a href="/">Home Page</a>
-	  &nbsp
-    <a href="/trips">All Trips</a>
-    <% if (user) {%>
-    &nbsp
-  	<a href="/trips/new">Add a Trip</a>
-    &nbsp
-  	<a href="/logout">Logout</a>
-    <% } else { %>
-    &nbsp
-    <a href="/auth/google">Login</a>
-    <% } %>
-</nav>
-  <main>
+  <nav class="header-navbar">
+
+    <div class="navbar-top">
+      <img src="../images/logo.png" alt="logo">
+      <h1>Travel Journal</h1>
+    </div>
+
+    <div class="navbar-center" id="navbar-items">
+        <a href="/">Home Page</a>
+        <a href="/trips">All Trips</a>
+        <% if (user) {%>
+        <a href="/trips/new">Add a Trip</a>
+        <a href="/logout">Logout</a>
+        <% } else { %>
+        <a href="/auth/google">Login</a>
+        <% } %>
+      </div>
+
+        <a href="javascript:void(0);" class="icon" onClick="openMenu()">
+          <i class="fa fa-bars"></i>
+        </a>
+
+    <p>Made with 🧡 by Agathe Lavigne</p>
+
+  </nav>
+  <main class="container">
     <h1><%= title %></h1>
