--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,8 @@
 <%- include('./partials/header') %>
 
-<h2>Why Travelling ?  ✈️</h2>
+<div class="homepage">
+	<h2>Why Travelling ?  ✈️</h2>
 
-<p>Traveling is important in life because it will open you up to a new way of living and being. You will experience new connections with people and places and immerse in different cultures, which can help widen your perspective. So much learning and personal growth can come from traveling.</p>
-
+	<p>Traveling is important in life because it will open you up to a new way of living and being. You will experience new connections with people and places and immerse in different cultures, which can help widen your perspective. So much learning and personal growth can come from traveling.</p>
+</div>
 <%- include('./partials/footer') %>
