--- a/views/trips/index.ejs
+++ b/views/trips/index.ejs
@@ -1,5 +1,7 @@
 <%- include('../partials/header') %>
 
+<section class="all-trips-section">
+
 <h2>Places I’ve been 🗺️</h2>
 <br><br>
 
@@ -20,7 +22,7 @@
     <% }); %>
   </div>
 
-
+</section>
 
 
 <%- include('../partials/footer') %>
