--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -209,7 +209,7 @@ h2{
 .travel-card:hover{
   transform: scale(1.1);
   background-color: #E8AA42;
-  transition: 200ms ease-in-out;
+  transition: 200ms ease-in-out 200ms;
 }
 
 .travel-card h3{
@@ -241,6 +241,19 @@ h2{
   border-radius: 15px;
 }
 
+.trip-creator{
+  margin-top: 90px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.trip-creator img{
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+}
+
 .trip-right{
   width:60%;
 }
@@ -248,7 +261,7 @@ h2{
 .trip-right img{
     height:496px;
     width: 100%;
-     object-fit: cover;
+    object-fit: cover;
     border-radius: 0 13px 13px 0;
 }
 
@@ -342,8 +355,8 @@ h2{
   display: flex;
   justify-content: space-between;
   align-items: center;
-   margin: 10px;
-   padding: 10px;
+  margin: 10px;
+  padding: 10px;
 }
 .friend-page .friend-info img{
   width: 35px;
