--- a/views/trips/edit.ejs
+++ b/views/trips/edit.ejs
@@ -1,19 +1,22 @@
 <%- include('../partials/header') %>
 
+<section class="edit-trip">
+  <h2>Edit Trip</h2>
+<br><br>
 <form action="/trips/<%= trip.id %>?_method=PUT" method="POST">
-  <label>Country:</label>
-  <input type="text" name="name" value="<%= trip.name %>" required>
-  <label>From:</label>
-  <input type="date" name="from" value="<%= trip.from %>" required>
-  <label>To:</label>
-  <input type="date" name="to" value="<%= trip.to %>" required>
-  <label>Sites Visited:</label>
-  <input type="text" name="sites" value="<%= trip.sites %>" required>
-  <label>What I've learned:</label>
-  <input type="text" name="learn" value="<%= trip.learn %>" required>
-  <label>Picture:</label>
+  <input type="text" name="name" value="<%= trip.name %>" placeholder="Country" required>
+  <br><br>
+  <input type="date" name="from" value="<%= trip.from %>" placeholder="From" required>
+  <br><br>
+  <input type="date" name="to" value="<%= trip.to %>" placeholder="To" required>
+  <br><br>
+  <input type="text" name="sites" value="<%= trip.sites %>" placeholder="Where I've been" required>
+  <br><br>
+  <input type="text" name="learn" value="<%= trip.learn %>" placeholder="What I've learned" required>
+  <br><br>
   <input type="text" name="image" value="<%= trip.image %>" required>
-  <input type="submit" value="Edit Trip">
+  <button type="submit">Edit Trip</button>
 </form>
+</section>
 
 <%- include('../partials/footer') %>
