--- a/views/trips/show.ejs
+++ b/views/trips/show.ejs
@@ -53,7 +53,7 @@
 
 <section class="add-friends">
   <div class="friend-page">
-  <h3>Friends</h3>
+  <h3>Friendly Guides</h3>
       <% friends.forEach(function(friend) { %>
       <div class="friend-info">
       <img src="<%= friend.picture %>" alt="<%= friend.name %> picture">
@@ -70,7 +70,7 @@
   <br>
 	    <input type="text" name="picture" placeholder="Picture">
   <br>
-	<button type="submit">Add a friend</button>
+	<button type="submit">Share a Guide</button>
 </form>
 </section>
 
